force-app/main/default/objects/Account/fields/DemoField__c.field-meta.xml
<CustomField>
    <fullName>DemoField__c</fullName>
    <label>DemoField</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>