force-app/main/default/objects/Account/fields/Test_AR_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_AR_Field__c</fullName>
    <label>Test AR Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>