force-app/main/default/objects/Account/fields/Testpercent__c.field-meta.xml
<CustomField>
    <fullName>Testpercent__c</fullName>
    <label>Testpercent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>